# user_service

./: README.md  pyproject.toml
.github/workflows/: user_service_CI.yml
user_service/: main.py
user_service/schemas/: __init__.py
